<resources>
    <string name="app_name">Food Whips</string>

    <string name="random_text">Random</string>
    <string name="search_text">Search</string>
    <string name="search_hint">Search for a recipe here.</string>
    <string name="popular_text">Popular</string>
    <string name="new_text">New</string>
    <string name="favorites_text">Favorites</string>
    <string name="search_results_text">Search Results</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    <string name="header_title">Search a variety of recipes.</string>
    <string name="header_description">Over 5,000,000 to try!</string>
    <string name="powered_by">Powered by the Yummly API</string>

    <string name="home">Home</string>
    <string name="search_name">Search by Name</string>
    <string name="search_ingredients">Search by Ingredients</string>
    <string name="search_cuisine">Search by Cuisine</string>

    <string name="about">About</string>
    <string name="developed">Developed by the Weeb Team</string>
    <string name="repository">https://github.com/leannedavid/food-whips</string>
    <string name="app_info">Food Whips is an app created by students for the CS 4540 class offered by Cal State LA in Summer 2017.</string>
    <string name="yummly_info">The Yummly API is an access library for recipes hosted in the Yummly database; use of the API in the app follows the proper rules and guidelines.</string>
    <string name="repo_help">For more information or to report an issue, please visit the repository linked and contact us.</string>
    <string name="yummly_link">For information on the Yummly API \nvisit their website by tapping here.</string>
    <string name="yummly_anchor">https://developer.yummly.com/</string>
    <string name="app_version">0.1.1 / Non-Complete</string>

    <!-- Filter Add Button for Dynamically adding new layouts -->
    <string name="add_new_layout">Add</string>

    <!-- Ingredient Activity strings -->
    <string name="ingredient_search_hint">Enter name of food or recipe.</string>
    <string name="ingredient_text">Ingredient</string>
    <string name="ingredient_hint">Enter an ingredient.</string>

    <!-- Ingredient Radio Buttons strings -->
    <string name="include_ingredient">Include</string>
    <string name="exclude_ingredient">Exclude</string>

    <!-- Cuisine Activity strings -->
    <string name="cuisine_search_hint">Enter name of food or recipe.</string>
    <string name="cuisine_text">Cuisine</string>
    <string name="cuisine_hint">Enter a cuisine.</string>

    <!-- Cuisine Spinner strings -->
    <string name="cuisine_prompt">Choose a cuisine</string>

    <!-- Cuisine Radio Buttons strings -->
    <string name="allow_cuisine">Allow</string>
    <string name="exclude_cuisine">Exclude</string>

    <!-- List of options for cuisines -->
    <string-array name="cuisine_arrays">
        <item>American</item>
        <item>Italian</item>
        <item>Asian</item>
        <item>Mexican</item>
        <item>Southern</item>
        <item>French</item>
        <item>Southwestern</item>
        <item>Barbecue</item>
        <item>Indian</item>
        <item>Chinese</item>
        <item>Cajun</item>
        <item>English</item>
        <item>Mediterranean</item>
        <item>Greek</item>
        <item>Spanish</item>
        <item>German</item>
        <item>Thai</item>
        <item>Moroccan</item>
        <item>Irish</item>
        <item>Japanese</item>
        <item>Cuban</item>
        <item>Hawaiian</item>
        <item>Swedish</item>
        <item>Swedish</item>
        <item>Hungarian</item>
        <item>Portuguese</item>
    </string-array>

    <string-array name="random_cuisine_arrays">
        <item>American</item>
        <item>Italian</item>
        <item>Asian</item>
        <item>Mexican</item>
        <item>French</item>
        <item>Indian</item>
        <item>Chinese</item>
    </string-array>

    <!-- List of options for courses -->
    <string-array name="course_array">
        <item>Choose a Course</item>
        <item>Main Dishes</item>
        <item>Desserts</item>
        <item>Side</item>
        <item>Lunch</item>
        <item>Appetizers</item>
        <item>Salads</item>
        <item>Breads</item>
        <item>Breakfast</item>
        <item>Soups</item>
        <item>Beverages</item>
        <item>Condiments</item>
        <item>Cocktails</item>
    </string-array>

    <string-array name="random_course_array">
        <item>Main Dishes</item>
        <item>Desserts</item>
        <item>Side</item>
        <item>Lunch</item>
        <item>Appetizers</item>
    </string-array>

    <!-- List of options for flavors in random -->
    <string-array name="flavor_array">
        <item>Sweet</item>
        <item>Spicy</item>
    </string-array>

    <!-- List of options for diets -->
    <string-array name="diet_array">
        <item>Choose a Diet</item>
        <item>387^Lacto-ovo vegetarian</item>
        <item>388^Lacto vegetarian</item>
        <item>389^Ovo vegetarian</item>
        <item>390^Pescetarian</item>
        <item>386^Vegan</item>
        <item>403^Paleo</item>
    </string-array>

    <!-- List of options for Holidays -->
    <string-array name="holiday_array">
        <item>Choose a Holiday</item>
        <item>Christmas</item>
        <item>Thanksgiving</item>
        <item>Summer</item>
        <item>Fall</item>
        <item>New Year</item>
        <item>Super Bowl</item>
        <item>Winter</item>
        <item>Spring</item>
        <item>Halloween</item>
        <item>Valentines Day</item>
        <item>Hanukkah</item>
        <item>Passover</item>
        <item>Easter</item>
        <item>St Patricks Day</item>
        <item>Chinese New Year</item>
        <item>4th of July</item>
    </string-array>

    <!-- List of options for Time -->
    <string-array name="time_array">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50+</item>
    </string-array>

    <string name="empty_data">No data to display.</string>

    <string name="title_activity_base">BaseActivity</string>

    <!-- Buttons for specific recipe chosen -->
    <string name="instructions_button">Instructions</string>
    <string name="favorite_button">Favorite</string>
    <string name="picture_button">Photo</string>

    <string name="welcome_page"><u>WELCOME TO FOODWHIPS</u></string>
    <string name="recommended_recipes"><u>RECIPE OF THE DAY</u></string>


    <string name="filterNameInstructions">Instructions: To find recipes that fall under certain ranges,
        please fill out the form below.
    </string>

    <string name="filterIngredientInstructions">Instructions: Want to find recipes with ingredients you
        can find around the house? Enter as many ingredients as you want to include and/or exclude.
        \n\nFor additional text fields, tap the \'Add\' button.
    </string>

    <string name="filterCuisinesInstructions">Instructions: To find recipes that are of a certain cuisine,
    fill out the form below. \n\nFor additional text fields, tap the \'Add\' button.</string>
</resources>
