<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_home"
            android:title="@string/home"
            android:icon="@drawable/home_icon"/>

        <item
            android:id="@+id/drawer_favorites"
            android:title="@string/favorites_text"
            android:icon="@drawable/star"/>

    </group>



    <item
        android:id="@+id/search_menu_header"
        android:title="@string/search_text">

        <menu>
            <item
                android:id="@+id/search_name"
                android:title="@string/search_name"
                android:icon="@drawable/search_icon"/>
            <item
                android:id="@+id/search_ingredients"
                android:title="@string/search_ingredients"
                android:icon="@drawable/search_icon"/>
            <item
                android:id="@+id/search_cuisine"
                android:title="@string/search_cuisine"
                android:icon="@drawable/search_icon"/>
        </menu>
    </item>

    <item
        android:id="@+id/drawer_random"
        android:title="@string/random_text"
        android:icon="@drawable/random_icon"/>

</menu>