<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".2"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".8">

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/developed"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"/>

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <TextView
            android:id="@+id/repo_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repository"
            android:gravity="center"/>

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <TextView
            android:id="@+id/yummly_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yummly_link"
            android:background="@drawable/back"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textColor="@color/black"/>

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_info"
            android:textColor="@color/black"/>

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yummly_info"
            android:textColor="@color/black"/>

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repo_help"
            android:textColor="@color/black"/>

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

    </LinearLayout>

</LinearLayout>