<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textStyle="italic"
            android:textSize="15sp"
            android:padding="11dp"
            android:text="@string/filterCuisinesInstructions"/>

        <!-- ID to represent Spinner & RadioGroup-->
        <LinearLayout
            android:id="@+id/base_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <!-- Search bar above filter layout -->
            <EditText
                android:id="@+id/search_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:layout_weight="14"
                android:hint="@string/cuisine_search_hint"
                android:inputType="text"
                android:paddingLeft="10sp">

                <requestFocus />
            </EditText>

            <!-- Cuisine field LinearLayout -->
            <LinearLayout
                android:id="@+id/cuisine_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <Spinner
                    android:id="@+id/cuisine_options"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/cuisine_arrays"
                    android:prompt="@string/cuisine_prompt">
                </Spinner>

                <RadioGroup
                    android:id="@+id/filter_button"
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/filter_cuisine_1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/allow_cuisine" />

                    <RadioButton
                        android:id="@+id/filter_cuisine_2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/exclude_cuisine" />

                </RadioGroup>


            </LinearLayout>

            <!-- New layouts are inserted here -->

        </LinearLayout>


        <!-- Layout for the Search and Add Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_horizontal|bottom"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/cuisines_search_button"
                android:backgroundTint="@color/colorAccent"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_text"/>

            <Button
                android:id="@+id/add_button"
                android:backgroundTint="@color/colorAccent"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_new_layout"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>
