<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/filter_text"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:inputType="text"
            android:background="@color/white"
            android:hint="@string/filter_hint" >
            <requestFocus/>
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RadioGroup
            android:id="@+id/filter_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/filter_ingredient_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/include_ingredient" />

            <RadioButton
                android:id="@+id/filter_ingredient_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exclude_ingredient" />

            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center"
            android:text="@string/search_text" />

    </LinearLayout>

</LinearLayout>
