<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Main page layout -->
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <!-- Include the toolbar in the main xml-->
        <include
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            layout="@layout/toolbar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorPrimary"
            android:outlineProvider="bounds">


            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <!-- Made edits here-->
            <EditText
                android:id="@+id/search_text"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_gravity="center"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:background="@color/white"
                android:hint="@string/search_hint"
                android:layout_weight="40"/>

            <Button
                android:id="@+id/search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="18dp"
                android:textColor="@color/white"
                android:text="@string/search_text"/>


            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/popular_tab"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/popular_text"
                android:gravity="center"
                android:layout_weight="1"
                android:onClick="onClickTab1"
                android:clickable="true"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:background="@drawable/back"/>
            <TextView
                android:id="@+id/new_tab"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/new_text"
                android:gravity="center"
                android:layout_weight="1"
                android:onClick="onClickTab2"
                android:clickable="true"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:background="@drawable/back"/>
            <TextView
                android:id="@+id/favorites_tab"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/favorites_text"
                android:gravity="center"
                android:layout_weight="1"
                android:onClick="onClickTab3"
                android:clickable="true"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:background="@drawable/back"/>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:paddingTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <!-- Drawer items go in here -->
    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_gravity="start"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:headerLayout="@layout/navigation_drawer_header"
        app:menu="@menu/navigation_drawer_menu"/>

</android.support.v4.widget.DrawerLayout>